--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cyberking Capital - Empowering Your Financial Future with Smart Lead Management."
     />
+    <meta name="keywords" content="Cyberking Capital, finance, CRM, lead management, smart investing, admin dashboard" />
+    <meta name="author" content="Cyberking Capital Team" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Cyberking Capital</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
